# test-task

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  ivfs.h  main.cpp  vfs.h
inc/: file.h  utils.h  vfs.h
src/: chunkheader.cpp  filedescriptor.cpp  filetree.cpp  main.cpp  storagefile.cpp  treenode.cpp  utils.cpp  vfs.cpp
